过渡效果延时添加

--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
   </head>
-  <body class="h-full dark:bg-slate-900 dark:text-white transition">
+  <body class="h-full dark:bg-slate-900 dark:text-white">
     <div id="root" class='h-full'></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script>
+      setTimeout(() => {
+        document.body.classList.add('transition')
+      }, 150);
+    </script>
   </body>
 </html>
